[package]
name = "reth-xdc-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XDC Network node implementation for Reth"

[lints]
workspace = true

[dependencies]
# Reth core dependencies
reth-node-builder = { workspace = true }
reth-node-api = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-chainspec = { workspace = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-execution-types = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-storage-api = { workspace = true }
reth-storage-errors = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-network = { workspace = true }
reth-network-api = { workspace = true }
reth-eth-wire = { workspace = true }
reth-eth-wire-types = { workspace = true }
reth-consensus = { workspace = true }
reth-payload-builder = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-errors = { workspace = true }
reth-revm = { workspace = true }

# XDC consensus
reth-consensus-xdpos = { workspace = true }

# Alloy dependencies
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-evm = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types = { workspace = true }
reth-engine-local = { workspace = true }

# Revm
revm = { workspace = true }
revm-primitives = { workspace = true }

# Async/sync
parking_lot = { workspace = true }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
reth-testing-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "reth-evm/std",
]
optimism = []
asm-keccak = [
    "alloy-primitives/asm-keccak",
]
test-utils = [
    "reth-evm/test-utils",
]
