[package]
name = "reth-xdc-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XDC-specific primitive types for Reth"

[lints]
workspace = true

[dependencies]
# reth
reth-primitives-traits = { workspace = true, features = ["serde-bincode-compat"] }
reth-ethereum-primitives.workspace = true
reth-eth-wire-types = { workspace = true, optional = true }

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-consensus.workspace = true

# misc
serde = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std", "serde"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "alloy-consensus/std",
    "serde?/std",
    "reth-eth-wire-types?/std",
]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "alloy-consensus/serde",
    "reth-primitives-traits/serde",
]
reth-eth-wire-types = ["dep:reth-eth-wire-types"]
